--- a/styles/bases/general.css
+++ b/styles/bases/general.css
@@ -11,6 +11,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
+ul {
+  list-style-type: none;
+}
 .h1 {
   font-size: var(--font-lg);
   line-height: var(--lineheight-lg);
