form sending email

--- a/styles/bases/general.css
+++ b/styles/bases/general.css
@@ -14,6 +14,7 @@ a {
 ul {
   list-style-type: none;
 }
+/* font size */
 .h1 {
   font-size: var(--font-lg);
   line-height: var(--lineheight-lg);
@@ -29,6 +30,14 @@ ul {
 .h4 {
   font-size: var(--font-xs);
   line-height: var(--lineheight-xs);
+}
+/* font color */
+.red-text {
+  color: red;
+}
+/* margin */
+.mb-19 {
+  margin-bottom: 19px;
 }
 .hr-top {
   border: 1px solid #000000;
