--- a/components/appointmentForm/AppointmentForm.module.css
+++ b/components/appointmentForm/AppointmentForm.module.css
@@ -4,13 +4,14 @@
   margin-top: 39px;
 }
 .form input {
-  margin-bottom: 19px;
   border: none;
   border-bottom: 1px solid #000000;
   padding: 5px 10px;
   outline: none;
+  width: 100%;
 }
 .form input:last-child {
+  width: auto;
   align-self: start;
   background-color: transparent;
   border-bottom: none;
