--- a/components/dropDownCard/DropDownCard.module.css
+++ b/components/dropDownCard/DropDownCard.module.css
@@ -1,3 +1,19 @@
 .content {
   margin-top: 29px;
 }
+.darkSquare {
+  background-color: var(--black);
+  width: 624px;
+  height: 437px;
+  position: relative;
+}
+.loadmore {
+  position: absolute;
+  color: var(--white);
+  font-size: 35px;
+  line-height: 32px;
+  font-weight: 400;
+  top: 2%;
+  left: 2%;
+  cursor: pointer;
+}
