--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -1,8 +1,4 @@
-.main {
-  font-weight: 400;
-  line-height: 32px;
-}
-.firstSection {
+/* .firstSection {
   margin: auto;
   padding-left: 50px;
   padding-right: 50px;
@@ -43,4 +39,4 @@
 .foundersBtn {
   margin-top: 118px;
   cursor: pointer;
-}
+} */
