--- a/styles/bases/general.css
+++ b/styles/bases/general.css
@@ -25,8 +25,8 @@ ul {
   line-height: var(--lineheight-m);
 }
 .h3 {
-  font-size: var(--font-sm);
-  line-height: var(--lineheight-sm);
+  font-size: var(--font-s);
+  line-height: var(--lineheight-s);
 }
 .h4 {
   font-size: var(--font-xs);
@@ -40,6 +40,24 @@ ul {
 .mb-19 {
   margin-bottom: 19px;
 }
+.mt-28 {
+  margin-top: 28px;
+}
+.mt-49 {
+  margin-top: 49px;
+}
+.mt-158 {
+  margin-top: 158px;
+}
+.mt-118 {
+  margin-top: 118px;
+}
+.mt-140 {
+  margin-top: 140px;
+}
+.mt-176 {
+  margin-top: 176px;
+}
 .hr-top {
   border: 1px solid #000000;
   margin-top: 28px;
@@ -52,6 +70,6 @@ ul {
 .section {
   padding-left: 50px;
   padding-right: 50px;
-  margin: auto;
-  margin-top: 42px;
+  margin-left: auto;
+  margin-right: auto;
 }
