--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,5 @@
 @import "./layout/grid.css";
 @import "./bases/general.css";
 @import "./utilies/utilies.css";
+@import "./variables/spacing.css";
+@import "./variables/typography.css";
