--- a/components/exStaticCard/VerticalLayout.module.css
+++ b/components/exStaticCard/VerticalLayout.module.css
@@ -1,8 +1,8 @@
-.container {
+.topcontainer {
   display: flex;
   justify-content: center;
 }
 .img {
-  height: 70%;
-  width: 70%;
+  width: 100%;
+  height: 100%;
 }
