added all the pages in pages

--- a/components/exStaticCard/VerticalLayout.module.css
+++ b/components/exStaticCard/VerticalLayout.module.css
@@ -1,8 +1,7 @@
 .topcontainer {
   width: 100%;
-  position: relative;
-  height: 600px;
+  display: block;
 }
-.img {
+/* .img {
   width: 100%;
-}
+} */
