fixed form that could not be responsive before

--- a/components/appointmentForm/AppointmentForm.module.css
+++ b/components/appointmentForm/AppointmentForm.module.css
@@ -1,7 +1,6 @@
 .form {
-  display: flex;
-  flex-direction: column;
   margin-top: 39px;
+  width: 100%;
 }
 .form input {
   border: none;
@@ -9,6 +8,11 @@
   padding: 5px 10px;
   outline: none;
   width: 100%;
+  margin-bottom: 19px;
+}
+.form input[type="datetime-local"] {
+  width: 100%;
+  font-size: var(--font-xs);
 }
 .form input:last-child {
   width: auto;
