--- a/components/imageList/ImageList.module.css
+++ b/components/imageList/ImageList.module.css
@@ -4,9 +4,13 @@
   margin-top: var(--spacing-m);
 }
 .pics {
-  transition: all 350ms ease;
   cursor: pointer;
   margin-bottom: 12px;
+  height: 100%;
+}
+.pic {
+  transition: all 350ms ease;
+  cursor: zoom-in;
   height: 100%;
 }
 .pics:hover {
@@ -53,20 +57,29 @@
   align-items: center;
   overflow: hidden;
   z-index: 999;
-
   background-color: orange;
 }
 .container {
   padding: 20px;
-  margin: 10px auto;
   height: 100%;
 }
-.img {
+.img_origin {
+  height: 100%;
+
+  display: block;
+  line-height: 0;
+  object-fit: cover;
+
+  transform-origin: center;
+  transform: scale(1) translate(0px, 0px);
+}
+/* .img_zoom {
   height: 100%;
   width: 100%;
   display: block;
   line-height: 0;
-}
+  transform: scale(2);
+} */
 .closeIcon {
   position: fixed;
   top: 20px;
