--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,4 @@
 @import "./utilies/utilies.css";
 @import "./variables/spacing.css";
 @import "./variables/typography.css";
+@import "./variables/breakpoints.css";
