--- a/components/dropDownCard/ExpoImageList.module.css
+++ b/components/dropDownCard/ExpoImageList.module.css
@@ -1,3 +1,8 @@
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 95px;
+}
 .content {
   margin-top: var(--spacing-m);
 }
@@ -16,4 +21,11 @@
   top: 2%;
   left: 2%;
   cursor: pointer;
+}
+
+@media screen and (max-width: 760px) {
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
 }
