--- a/components/layout/Footer.module.css
+++ b/components/layout/Footer.module.css
@@ -6,6 +6,10 @@
 .container {
   padding-top: 42px;
 }
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 0.5fr 0.5fr;
+}
 
 .col1 {
   padding-left: 48px;
@@ -31,4 +35,25 @@
 .logo_container {
   display: flex;
   gap: 10px;
+}
+
+@media screen and (max-width: 760px) {
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 1fr;
+  }
+  .col1 {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 2;
+    padding-bottom: 30px;
+  }
+  .col2 {
+    grid-row: 2 / span 1;
+    grid-column: 1 / span 1;
+  }
+  .col3 {
+    grid-row: 2 / span 1;
+    grid-column: 2 / span 1;
+  }
 }
