--- a/components/dropDownCard/ArtistBio.module.css
+++ b/components/dropDownCard/ArtistBio.module.css
@@ -4,9 +4,9 @@
 }
 .profile {
   height: 100%;
+  padding-top: 70px;
 }
 .profileImg {
-  margin-top: 70px;
   max-height: 100%;
   max-width: 100%;
   display: block;
