--- a/components/imageList/ImageList.module.css
+++ b/components/imageList/ImageList.module.css
@@ -27,8 +27,8 @@
   top: 0;
   left: 0;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   visibility: hidden;
   opacity: 0;
   overflow: hidden;
@@ -46,8 +46,8 @@
   top: 0;
   left: 0;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   overflow: hidden;
   z-index: 999;
   background-color: orange;
@@ -55,9 +55,6 @@
 .container {
   height: 100%;
   width: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 .pics {
   cursor: pointer;
@@ -66,8 +63,9 @@
 .pic {
   transition: all 350ms ease;
   cursor: zoom-in;
-  height: 100%;
-  max-height: 90vh;
+  max-height: 80vh;
+  width: 100%;
+  justify-content: center;
 }
 .pics:hover {
   filter: opacity(0.8);
@@ -75,18 +73,11 @@
 }
 
 .img_origin {
-  display: block;
   line-height: 0;
-  max-height: 90vh;
-  width: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
 
-.img_zoom {
-  height: 100%;
-  width: 100%;
-  display: block;
-  line-height: 0;
-}
 .closeIcon {
   position: fixed;
   top: 20px;
@@ -106,4 +97,7 @@
   top: 50%;
   left: 5%;
   z-index: 999;
+}
+.image_parameter {
+  justify-content: center;
 }
