--- a/components/imageList/ImageList.module.css
+++ b/components/imageList/ImageList.module.css
@@ -55,6 +55,7 @@
 .container {
   height: 100%;
   width: auto;
+  overflow: hidden;
 }
 .pics {
   cursor: pointer;
@@ -66,6 +67,7 @@
   max-height: 80vh;
   width: 100%;
   justify-content: center;
+  overflow: hidden;
 }
 .pics:hover {
   filter: opacity(0.8);
@@ -74,7 +76,7 @@
 
 .img_origin {
   line-height: 0;
-  max-width: 100%;
+  /* max-width: 100%; */
   max-height: 100%;
 }
 
