header images added

--- a/components/dropDownCard/PureWords.module.css
+++ b/components/dropDownCard/PureWords.module.css
@@ -1,4 +1,11 @@
-.collapsible {
-  transition: height ease-in-out 0.3s;
-  overflow: hidden;
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 95px;
+}
+@media screen and (max-width: 760px) {
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
 }
