--- a/styles/bases/general.css
+++ b/styles/bases/general.css
@@ -46,6 +46,12 @@ ul {
 .mt-28 {
   margin-top: 28px;
 }
+.mt-42 {
+  margin-top: 42px;
+}
+.mb-42 {
+  margin-bottom: 42px;
+}
 .mt-49 {
   margin-top: 49px;
 }
