--- a/components/artists_artist_list/ArtistList.module.css
+++ b/components/artists_artist_list/ArtistList.module.css
@@ -1,3 +1,8 @@
+.container {
+  display: flex;
+  justify-content: center;
+}
+
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -8,12 +13,4 @@
     display: grid;
     grid-template-columns: 1fr;
   }
-}
-
-.profileImg {
-  max-height: 100%;
-  max-width: 100%;
-
-  display: block;
-  line-height: 0;
 }
