--- a/components/dropDownCard/DropDownCard.module.css
+++ b/components/dropDownCard/DropDownCard.module.css
@@ -1,2 +1,11 @@
-
-
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 95px;
+}
+@media screen and (max-width: 414px) {
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
