--- a/components/dropDownCard/ExpoImageList.module.css
+++ b/components/dropDownCard/ExpoImageList.module.css
@@ -1,7 +1,7 @@
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 95px;
+  column-gap: 50px;
 }
 .content {
   margin-top: var(--spacing-m);
@@ -26,5 +26,9 @@
   .grid {
     display: grid;
     grid-template-columns: 1fr;
+    margin-top: 65px;
+  }
+  .grid:first-child {
+    margin-top: 0px;
   }
 }
