--- a/components/artist_works_imagelist/ImageList.module.css
+++ b/components/artist_works_imagelist/ImageList.module.css
@@ -1,4 +1,22 @@
-.gallery {
+.grid {
+  column-count: 3;
+  column-width: 33%;
+  gap: 30px;
+}
+.thumbnail {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+@media screen and (max-width: 414px) {
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 18px;
+  }
+}
+/* 
+
   column-count: 3;
   column-width: 33%;
   margin-top: var(--spacing-m);
@@ -9,13 +27,13 @@
     column-count: 1;
     column-width: 100%;
   }
-}
+} */
 /* .gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
 } */
-.close {
+/* .close {
   width: 100%;
   height: 100vh;
   position: fixed;
@@ -73,7 +91,7 @@
 .img_origin {
   line-height: 0;
   /* max-width: 100%; */
-  max-height: 100%;
+/* max-height: 100%;
 }
 
 .closeIcon {
@@ -98,4 +116,4 @@
 }
 .image_parameter {
   justify-content: center;
-}
+} */
