--- a/components/layout/Footer.module.css
+++ b/components/layout/Footer.module.css
@@ -4,28 +4,26 @@
   color: var(--white);
 }
 .container {
-  padding-top: 42px;
+  padding: 50px;
 }
 .grid {
   display: grid;
   grid-template-columns: 1fr 0.5fr 0.5fr;
+  column-gap: 50px;
 }
 
 .col1 {
-  padding-left: 48px;
   font-weight: 400;
   font-style: normal;
 }
 .col2 {
-  padding-left: 48px;
   font-style: normal;
   font-weight: 400;
 }
 .col2 .row {
-  margin-bottom: 35px;
+  margin-bottom: 40px;
 }
 .col3 {
-  padding-left: 48px;
   font-style: normal;
   font-weight: 400;
 }
@@ -41,15 +39,19 @@
 }
 
 @media screen and (max-width: 760px) {
+  .container {
+    padding: 13px;
+  }
   .grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto 1fr;
+    column-gap: 13px;
   }
   .col1 {
     grid-row: 1 / span 1;
     grid-column: 1 / span 2;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
   }
   .col2 {
     grid-row: 2 / span 1;
