--- a/styles/bases/general.css
+++ b/styles/bases/general.css
@@ -106,7 +106,14 @@ hr {
 .hr-bottom-show {
   margin-top: 145px;
 }
-
+.layout {
+  padding: 0 50px;
+}
+@media screen and (max-width: 760px) {
+  .layout {
+    padding: 0 13px;
+  }
+}
 @media screen and (max-width: 414px) {
   .hr-top {
     margin-top: 20px;
