--- a/components/header/MobileHeader.module.css
+++ b/components/header/MobileHeader.module.css
@@ -1,1 +1,18 @@
-
+.title {
+  position: fixed;
+  top: 20px;
+  left: 1.4%;
+  color: var(--black);
+  font-size: var(--font-xs);
+  line-height: var(--lineheight-xs);
+  cursor: pointer;
+  z-index: 99;
+}
+.links {
+  position: fixed;
+  writing-mode: vertical-rl;
+  top: 20px;
+  right: 1.4%;
+  color: var(--black);
+  z-index: 99;
+}
