--- a/components/header/PcHeader.module.css
+++ b/components/header/PcHeader.module.css
@@ -8,15 +8,16 @@
   writing-mode: vertical-rl;
   top: 20px;
   right: 1.4%;
-  color: var(--black);
+  color: var(--white);
   z-index: 99;
+  mix-blend-mode: exclusion;
 }
 .links:hover ~ svg .study {
   fill: var(--black);
 }
-.links:hover {
+/* .links:hover {
   color: var(--white);
-}
+} */
 .icon {
   position: absolute;
   font-size: var(--font-xs);
@@ -41,11 +42,12 @@
   position: fixed;
   top: 20px;
   left: 1.4%;
-  color: var(--black);
+  color: var(--white);
   font-size: var(--font-xs);
   line-height: var(--lineheight-xs);
   cursor: pointer;
   z-index: 99;
+  mix-blend-mode: exclusion;
 }
 /* .title:hover {
   color: var(--white);
