--- a/components/artist_works_imagelist/ImageList.module.css
+++ b/components/artist_works_imagelist/ImageList.module.css
@@ -74,8 +74,10 @@
 }
 .pics {
   cursor: pointer;
-  height: 100%;
+  /* height: 100%; */
   /* overflow: hidden; */
+  width: 100%;
+  display: block;
 }
 .pic {
   transition: all 350ms ease;
