--- a/components/header/PcHeader.module.css
+++ b/components/header/PcHeader.module.css
@@ -5,7 +5,7 @@
   background-color: black;
 }
 .links {
-  position: fixed;
+  position: absolute;
   writing-mode: vertical-rl;
   top: 20px;
   right: 1.4%;
@@ -41,7 +41,7 @@
   display: none;
 }
 .title {
-  position: fixed;
+  position: absolute;
   top: 20px;
   left: 1.4%;
   color: var(--white);
