--- a/components/exhibitions_exhibition_staticcard/ExStaticCard.module.css
+++ b/components/exhibitions_exhibition_staticcard/ExStaticCard.module.css
@@ -6,3 +6,101 @@
   width: 100%;
   height: 100%;
 }
+.close {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+  opacity: 0;
+  /* overflow: hidden; */
+  z-index: 999;
+  transform: scale(0);
+  transition: opacity 4s ease, visibility 4s ease, transform 0.5s ease-in-out;
+}
+.open {
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* overflow: hidden; */
+  z-index: 999;
+  background-color: white;
+}
+.container {
+  height: 100%;
+  width: auto;
+}
+.pics {
+  cursor: pointer;
+  /* height: 100%; */
+  /* overflow: hidden; */
+  width: 100%;
+  display: block;
+}
+.pic {
+  transition: all 350ms ease;
+  cursor: zoom-in;
+  height: 80vh;
+  justify-content: center;
+  align-items: center;
+  /* overflow: hidden; */
+  display: flex;
+}
+.pics:hover {
+  filter: opacity(0.8);
+  transform: scale(1.01);
+}
+
+.img_origin {
+  line-height: 0;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.closeIcon {
+  position: fixed;
+  top: 2%;
+  right: 0.8%;
+  color: white;
+  mix-blend-mode: exclusion;
+  background-color: none;
+  z-index: 999;
+  cursor: pointer;
+}
+.next {
+  position: fixed;
+  top: 50%;
+  right: 1.5%;
+  z-index: 999;
+  color: white;
+  mix-blend-mode: exclusion;
+  cursor: pointer;
+}
+.prev {
+  position: fixed;
+  top: 50%;
+  left: 1.5%;
+  z-index: 999;
+  color: white;
+  mix-blend-mode: exclusion;
+  cursor: pointer;
+}
+.image_parameter {
+  justify-content: center;
+}
+.thumbnail {
+  height: auto;
+  width: 100%;
+}
