--- a/styles/bases/general.css
+++ b/styles/bases/general.css
@@ -21,6 +21,7 @@
 body {
   min-height: 100vh;
   -webkit-font-smoothing: antialiased;
+  overflow-y: hidden;
   overscroll-behavior: contain;
 }
 a {
