--- a/styles/bases/general.css
+++ b/styles/bases/general.css
@@ -18,11 +18,12 @@
 .en {
   font-family: Zichtbaar;
 }
+html {
+  touch-action: pan-down;
+}
 body {
   min-height: 100vh;
   -webkit-font-smoothing: antialiased;
-  overflow-y: hidden;
-  overscroll-behavior: contain;
 }
 a {
   color: inherit;
