--- a/styles/bases/general.css
+++ b/styles/bases/general.css
@@ -14,14 +14,17 @@
 }
 .tc {
   font-family: Zichtbaar, "Noto Sans TC", sans-serif;
+  overflow-y: scroll;
 }
 .en {
   font-family: Zichtbaar;
+  overflow-y: scroll;
 }
 
 body {
   min-height: 100vh;
   -webkit-font-smoothing: antialiased;
+  overflow-y: hidden;
 }
 a {
   color: inherit;
