--- a/components/header/PcHeader.module.css
+++ b/components/header/PcHeader.module.css
@@ -24,6 +24,8 @@
   position: absolute;
   font-size: var(--font-xs);
   line-height: var(--lineheight-xs);
+  color: var(--white);
+  mix-blend-mode: exclusion;
 }
 .exhIcon {
   display: none;
