--- a/components/appointment_form/AppointmentForm.module.css
+++ b/components/appointment_form/AppointmentForm.module.css
@@ -5,7 +5,7 @@
 .form input {
   border: none;
   border-bottom: 1px solid #000000;
-  padding: 5px 10px;
+  padding: 5px 0px 5px;
   outline: none;
   width: 100%;
   margin-bottom: 19px;
