--- a/components/exhibitions_exhibition_staticcard/HorizontalLayout.module.css
+++ b/components/exhibitions_exhibition_staticcard/HorizontalLayout.module.css
@@ -2,7 +2,7 @@
   width: 100%;
 }
 .video_container {
-  aspect-ratio: 4/3;
+  aspect-ratio: 16/9;
 }
 .img {
   width: auto;
@@ -18,5 +18,8 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
+  }
+  .video_container {
+    aspect-ratio: 4/3;
   }
 }
