--- a/components/exhibitions_exhibition_staticcard/VerticalLayout.module.css
+++ b/components/exhibitions_exhibition_staticcard/VerticalLayout.module.css
@@ -3,7 +3,7 @@
   display: block;
 }
 .video_container {
-  aspect-ratio: 4/3;
+  aspect-ratio: 16/9;
 }
 .img {
   width: 100%;
@@ -18,5 +18,8 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
+  }
+  .video_container {
+    aspect-ratio: 4/3;
   }
 }
