--- a/components/header/Header.module.css
+++ b/components/header/Header.module.css
@@ -1,3 +1,19 @@
+.mobile {
+  display: none;
+}
+.pc {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .mobile {
+    display: block;
+  }
+}
+@media screen and (min-width: 768px) {
+  .pc {
+    display: block;
+  }
+}
 .section {
   position: relative;
   cursor: pointer;
