--- a/styles/bases/general.css
+++ b/styles/bases/general.css
@@ -64,6 +64,11 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  text-decoration-line: underline;
+  text-decoration-thickness: 1px;
+}
+a:hover {
+  color: #9a9a9a;
 }
 ul {
   list-style-type: none;
@@ -207,46 +212,4 @@ hr {
     font-size: 15px;
     line-height: var(--lineheight-xs);
   }
-}
-
-/* light gallery */
-.lg-backdrop {
-  background-color: white !important;
-}
-.lg-next:before {
-  content: "" !important;
-}
-.lg-prev:after {
-  content: "" !important;
-}
-.lg-next,
-.lg-prev {
-  background-color: transparent !important;
-  color: #000000 !important;
-
-  font-size: 25px !important;
-}
-.lg-next.lg-icon {
-  font-family: "Zichtbaar" !important;
-}
-.lg-prev.lg-icon {
-  font-family: "Zichtbaar" !important;
-}
-.lg-zoom-in {
-  display: none;
-}
-.lg-zoom-out {
-  display: none;
-}
-.lg-toolbar .lg-close:after {
-  content: "Close" !important ;
-  color: #000000;
-  font-family: "Zichtbaar" !important;
-}
-.lg-toolbar {
-  left: unset !important;
-  right: 20px;
-}
-.lg-sub-html {
-  color: black !important;
 }
