fix footer font size

--- a/styles/bases/general.css
+++ b/styles/bases/general.css
@@ -209,7 +209,7 @@ hr {
     line-height: 25.5px;
   }
   .h4 {
-    font-size: 15px;
-    line-height: var(--lineheight-xs);
+    font-size: 20px;
+    line-height: 25.5px;
   }
 }
