--- a/styles/bases/general.css
+++ b/styles/bases/general.css
@@ -213,3 +213,22 @@ hr {
     line-height: 25.5px;
   }
 }
+/* buttons */
+.exhibition_btn {
+  background-color: #000;
+  color: #fff;
+  border: none;
+  padding: 8px 10px;
+  margin-top: 20px;
+  margin-right: 20px;
+  cursor: pointer;
+  display: inline-block;
+  text-decoration-line: none;
+}
+.exhibition_btn:hover {
+  color: #fff;
+  background-color: #9a9a9a;
+}
+.exhibition_btn:focus {
+  background-color: #9a9a9a;
+}
