--- a/components/dropDownCard/ExListWorks.module.css
+++ b/components/dropDownCard/ExListWorks.module.css
@@ -96,6 +96,14 @@
 .video_container {
   aspect-ratio: 16/9;
 }
+.text_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10%;
+  margin-right: 10%;
+  font-size: 32px;
+}
 
 @media screen and (max-width: 768px) {
   .video_container {
