fix exhibition wordslayout font size

--- a/components/exhibitions_exhibition_staticcard/ExStaticCard.module.css
+++ b/components/exhibitions_exhibition_staticcard/ExStaticCard.module.css
@@ -76,6 +76,11 @@
   z-index: 999;
   cursor: pointer;
 }
+@media screen and (max-width: 768px) {
+  .closeIcon {
+    display: none;
+  }
+}
 .next {
   position: fixed;
   top: 50%;
