--- a/styles/bases/general.css
+++ b/styles/bases/general.css
@@ -70,6 +70,9 @@ a {
 a:hover {
   color: #9a9a9a;
 }
+.no-underline {
+  text-decoration-line: none;
+}
 ul {
   list-style-type: none;
 }
@@ -226,7 +229,7 @@ hr {
   color: #fff;
   border: none;
   padding: 8px 10px;
-  margin-top: 20px;
+  margin-top: 0px;
   margin-right: 20px;
   cursor: pointer;
   display: inline-block;
