--- a/styles/bases/general.css
+++ b/styles/bases/general.css
@@ -64,15 +64,15 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-  text-decoration-line: underline;
   text-decoration-thickness: 1px;
 }
 a:hover {
   color: #9a9a9a;
 }
-.no-underline {
-  text-decoration-line: none;
+.text-underline {
+  text-decoration-line: underline;
 }
+
 ul {
   list-style-type: none;
 }
